# build_api

./: .cmake-format.yaml  .gitmodules  CMakeLists.txt  README.md  build_api.cpp  conanfile.py
cmake/: CMakeLists.txt  me_add_cmake_test.cmake  me_artifact.cmake  me_build_api.cmake  me_cmake_test.cmake  me_find_package.cmake  me_internal.cmake  me_mock.cmake  me_print.cmake  me_structure.cmake  me_test.cmake
cmake/lib/: CMakeLists.txt
cmake/lib/src/: me_add_cmake_test.cmake  me_artifact.cmake  me_build_api.cmake  me_cmake_test.cmake  me_internal.cmake  me_mock.cmake  me_print.cmake  me_structure.cmake  me_test.cmake
cmake/lib/test/: CMakeLists.txt  unittests_me_add_executable.cmake  unittests_me_add_unit.cmake  unittests_me_artifact.cmake  unittests_me_print.cmake
cmake/lib/test/component/: CMakeLists.txt
cmake/lib/test/component_1/: CMakeLists.txt
cmake/lib/test/executable/: CMakeLists.txt
cmake/lib/test/executable_contains_component_1/: CMakeLists.txt  main.cpp
cmake/lib/test/executable_contains_unit_main/: CMakeLists.txt
cmake/lib/test/executable_contains_units_1_2_3/: CMakeLists.txt  main.cpp
cmake/lib/test/executable_depends_unit_main/: CMakeLists.txt
cmake/lib/test/executable_src/: CMakeLists.txt
cmake/lib/test/executable_src_depends_unit_1/: CMakeLists.txt
cmake/lib/test/executable_src_depends_unit_2/: CMakeLists.txt
cmake/lib/test/executable_src_depends_unit_3/: CMakeLists.txt  main.cpp
cmake/lib/test/library_contains_unit_main/: CMakeLists.txt
cmake/lib/test/unit_2/: unit_2.cpp  (+2 more)
cmake/lib/unittest/: CMakeLists.txt  unittests_me_add_executable.cmake  unittests_me_add_library.cmake  unittests_me_add_unit.cmake  unittests_me_add_unittest.cmake  unittests_me_print.cmake  unittests_mock_setup.cmake
cmake/test/unit/: CMakeLists.txt  localdir_1.cpp
cmake/unittest/: CMakeLists.txt  unittests_me_add_library.cmake
me_build/: CMakeLists.txt  conanfile.py
me_build/cmake/: me_add_cmake_test.cmake  me_artifact.cmake  me_build.cmake  me_build_property_asan.cmake  me_build_property_clangtidy.cmake  me_build_property_tsan.cmake  me_build_property_usan.cmake  me_build_variants.cmake  me_cmake_test.cmake  me_default_build_variants.cmake  me_find_package.cmake  me_internal.cmake  me_mock.cmake  me_print.cmake  me_sanitizers.cmake  me_structure.cmake  me_test.cmake
me_build/test/: CMakeLists.txt
me_build/test/component/: CMakeLists.txt
me_build/test/executable/: CMakeLists.txt
me_build/test/unit/: CMakeLists.txt
me_build/test_package/: CMakeLists.txt  conanfile.py
me_build/unittest/: CMakeLists.txt  unittests_me_add_executable.cmake  unittests_me_add_library.cmake  unittests_me_add_package.cmake  unittests_me_add_packagetest.cmake  unittests_me_print.cmake
(+45 files in other folders)
